--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ bin-release/
 #Vscode
 .vscode/
 
+.DS_Store
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
